{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 55,
  "lineage": "783e1546-55fd-c884-1ce3-161c2ac11c3d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "test",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:711603980470:targetgroup/tf-example-lb-tg/141f9611233ce739",
            "arn_suffix": "targetgroup/tf-example-lb-tg/141f9611233ce739",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:711603980470:targetgroup/tf-example-lb-tg/141f9611233ce739",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d2c35c8cd379e329"
          },
          "dependencies": [
            "aws_vpc.globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "pubip",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01c03c9d2bd8b4917",
            "domain": "vpc",
            "id": "eipalloc-e60821c2",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0eda6e56b00279d78",
            "private_dns": "ip-10-0-1-13.eu-central-1.compute.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-18-198-58-127.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.198.58.127",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0582b2d01a665c272",
            "domain": "vpc",
            "id": "eipalloc-cd0d24e9",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07b8a52e71564449c",
            "private_dns": "ip-10-0-2-8.eu-central-1.compute.internal",
            "private_ip": "10.0.2.8",
            "public_dns": "ec2-18-193-228-213.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.193.228.213",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711603980470:internet-gateway/igw-08ccfd7036e690c9a",
            "id": "igw-08ccfd7036e690c9a",
            "owner_id": "711603980470",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0d2c35c8cd379e329"
          },
          "dependencies": [
            "aws_vpc.globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:711603980470:loadbalancer/app/albin/99b8f5e7fe447acd",
            "arn_suffix": "app/albin/99b8f5e7fe447acd",
            "dns_name": "albin-459409777.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:711603980470:loadbalancer/app/albin/99b8f5e7fe447acd",
            "idle_timeout": 100,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "albin",
            "security_groups": [
              "sg-01ec477e3aa9ded63"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06c3cbe48d4b00228"
              },
              {
                "subnet_id": "subnet-0ff95e447582b28f0"
              }
            ],
            "subnets": [
              "subnet-06c3cbe48d4b00228",
              "subnet-0ff95e447582b28f0"
            ],
            "vpc_id": "vpc-0d2c35c8cd379e329",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_security_group.allow_http",
            "aws_subnet.private_globin",
            "aws_vpc.globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:711603980470:listener/app/albin/99b8f5e7fe447acd/d97223f23241c064",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:711603980470:targetgroup/tf-example-lb-tg/141f9611233ce739",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:711603980470:listener/app/albin/99b8f5e7fe447acd/d97223f23241c064",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:711603980470:loadbalancer/app/albin/99b8f5e7fe447acd",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb_target_group.test",
            "aws_lb.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-e60821c2",
            "id": "nat-00cc50aae0788d222",
            "network_interface_id": "eni-0eda6e56b00279d78",
            "private_ip": "10.0.1.13",
            "public_ip": "18.198.58.127",
            "subnet_id": "subnet-0ff95e447582b28f0",
            "tags": {
              "Name": "nat_gateway_0"
            }
          },
          "dependencies": [
            "aws_eip.pubip",
            "aws_subnet.private_globin"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-cd0d24e9",
            "id": "nat-0c7fcbaec9d169747",
            "network_interface_id": "eni-07b8a52e71564449c",
            "private_ip": "10.0.2.8",
            "public_ip": "18.193.228.213",
            "subnet_id": "subnet-06c3cbe48d4b00228",
            "tags": {
              "Name": "nat_gateway_1"
            }
          },
          "dependencies": [
            "aws_eip.pubip",
            "aws_subnet.private_globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "rtgroup",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026d55f0f3aa95b721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00cc50aae0788d222",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026d55f0f3aa95b72",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.pubip",
            "aws_nat_gateway.ngw",
            "aws_route_table.rtgroup",
            "aws_subnet.private_globin"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-065f7df4d9b6f219e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c7fcbaec9d169747",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-065f7df4d9b6f219e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.pubip",
            "aws_nat_gateway.ngw",
            "aws_route_table.rtgroup",
            "aws_subnet.private_globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtgroup",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-026d55f0f3aa95b72",
            "owner_id": "711603980470",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00cc50aae0788d222",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d2c35c8cd379e329"
          },
          "dependencies": [
            "aws_vpc.globin"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-065f7df4d9b6f219e",
            "owner_id": "711603980470",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7fcbaec9d169747",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0d2c35c8cd379e329"
          },
          "dependencies": [
            "aws_vpc.globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtgroup",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04ad37d3e2765f12e",
            "route_table_id": "rtb-026d55f0f3aa95b72",
            "subnet_id": "subnet-0ff95e447582b28f0"
          },
          "dependencies": [
            "aws_route_table.rtgroup",
            "aws_subnet.private_globin",
            "aws_vpc.globin"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4a98ec6f14c0049",
            "route_table_id": "rtb-065f7df4d9b6f219e",
            "subnet_id": "subnet-06c3cbe48d4b00228"
          },
          "dependencies": [
            "aws_route_table.rtgroup",
            "aws_subnet.private_globin",
            "aws_vpc.globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711603980470:security-group/sg-01ec477e3aa9ded63",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ec477e3aa9ded63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP to VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "711603980470",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0d2c35c8cd379e329"
          },
          "dependencies": [
            "aws_vpc.globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_globin",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711603980470:subnet/subnet-0ff95e447582b28f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/28",
            "id": "subnet-0ff95e447582b28f0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711603980470",
            "tags": {
              "Name": "private_globin_0"
            },
            "vpc_id": "vpc-0d2c35c8cd379e329"
          },
          "dependencies": [
            "aws_vpc.globin"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711603980470:subnet/subnet-06c3cbe48d4b00228",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/28",
            "id": "subnet-06c3cbe48d4b00228",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "711603980470",
            "tags": {
              "Name": "private_globin_1"
            },
            "vpc_id": "vpc-0d2c35c8cd379e329"
          },
          "dependencies": [
            "aws_vpc.globin"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "globin",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:711603980470:vpc/vpc-0d2c35c8cd379e329",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d8470dc4545ff0ef",
            "default_route_table_id": "rtb-0c24bde38618c55e8",
            "default_security_group_id": "sg-0590c7b49445de08e",
            "dhcp_options_id": "dopt-bc8831d6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d2c35c8cd379e329",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c24bde38618c55e8",
            "owner_id": "711603980470"
          }
        }
      ]
    }
  ]
}